Version 5.9.25
- Added __P1__ macro defined only for P1 compiles
- Improved some error messages
- Made heap corruption code check depend on -g flag
- Tweaked file names in zip files to be compatible with more unzippers

Version 5.9.24
- Added --zip flag to create archive of source files
- Allowed __fromfile inside classes, and fixed symbol resolution for this case
- Fixed using local constants for default parameters in methods
- Fixed a compiler bug affecting fscanf
- Handled some more bitfield expressions in nucode & bytecode output
- Improved output of -f, and added #include'd files to that output
- Implemented ungetc function

Version 5.9.23
- Enable DEBUG in inline assembly if -gbrk is active
- Fixed .lbl+n expressions in inline assembly
- Fixed Spin2 loops so that the correct value is in the variable if the loop is quit
- Fixed Nucode evaluation of some bit operations
- Fixed a crash when duplicate names declared in anonymous structs
- Made sure all registers involved in a large data structure are allocated if any of them are used

Version 5.9.22
- Added control over individual warnings
- Define a symbol __DEBUG__ when -g or -gbrk is given
- Fixed indirect method pointer calls in Spin2 (like LONG[x](foo))
- Fixed compiling some boolean expressions involving 64 bit integers
- Fixed QCOS and QSIN when used with angles larger than twopi
- Fixed some signed/unsigned conflicts in Spin constant evaluation
- Made foo.[n] produce the same results on P2 as the usual Spin2 compiler, by having it extract the upper bits to find the range of bits affected
- New optimization to use SUMxx instructions if possible (thanks Ada!)
- New optimizations for memcpy/memmove (again, thanks to Ada)
- Removed <- and -> operators from Spin2 (use ROL and ROR instead)
- Revised P2 frequency calculations to match Chip's latest version
- Some floating point optimizations from Ada
- Several other miscellaneous optimizations from Ada
- Spin2cpp now respects '!cse' optimization flag.